--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,7 @@ classifiers = [
 python = "^3.6"
 
 poetry-core = "^1.0.0"
-cleo = "^0.8.1"
-clikit = "^0.6.2"
+cleo = {git = "https://github.com/sdispater/cleo.git", rev = "revamp-1.0"}
 crashtest = "^0.3.0"
 requests = "^2.18"
 cachy = "^0.3.0"
